--- a/src/app/paises/pages/por-pais/por-pais.component.html
+++ b/src/app/paises/pages/por-pais/por-pais.component.html
@@ -3,9 +3,7 @@
 
 <div class="row">
   <div class="col">
-    <form action="" (ngSubmit)='buscar()'>
-      <input type="text" name='termino' placeholder="Buscar pais" class="form-control" [(ngModel)]="termino">
-    </form>
+    <app-paises-input (onEnter)='buscar( $event )' (onDebounce)= 'sugerencias($event)'></app-paises-input>
   </div>
 </div>
 
@@ -16,25 +14,6 @@
 
 <div class="row" *ngIf="!hayError">
   <div class="col">
-    <table class="table table-hover" *ngIf="paises[0]">
-      <thead>
-        <tr>
-          <th> Código País </th>
-          <th> Bandera </th>
-          <th> Nombre </th>
-          <th> Población </th>
-          <th> </th>
-        </tr>
-      </thead>
-      <tbody >
-        <tr *ngFor="let pais of paises">
-          <td>{{pais.numericCode}}</td>
-          <td> <img class="small-flag" [src]="pais.flag"></td>
-          <td>{{pais.name}}</td>
-          <td>{{pais.population | number}}</td>
-          <td> <a [routerLink]="['/pais', pais.alpha2Code]"> Detalle </a></td>
-        </tr>
-      </tbody>
-    </table>
+    <app-paises-tabla [paises]='paises'></app-paises-tabla>
   </div>
 </div>
