--- a/src/app/paises/components/paises-input/paises-input.component.html
+++ b/src/app/paises/components/paises-input/paises-input.component.html
@@ -1,3 +1,3 @@
 <form action="" (ngSubmit)='buscar()'>
-  <input type="text" name='termino' placeholder="Buscar pais" class="form-control" [(ngModel)]="termino" (input)='teclaPresionada()'>
+  <input type="text" name='termino' placeholder={{placeholder}} class="form-control" [(ngModel)]="termino" (input)='teclaPresionada()'>
 </form>
