--- a/src/app/paises/pages/por-capital/por-capital.component.html
+++ b/src/app/paises/pages/por-capital/por-capital.component.html
@@ -1,1 +1,22 @@
-<p>por-capital works!</p>
+<h2>Por Capital</h2>
+<hr />
+
+<div class="row">
+  <div class="col">
+    <app-paises-input
+      (onEnter)="buscar($event)"
+      placeholder = 'Buscar capital...'
+    ></app-paises-input>
+  </div>
+</div>
+
+<hr />
+<div class="alert alert-danger" *ngIf="hayError">
+  No se encontró nada con el término: {{ termino }}
+</div>
+
+<div class="row" *ngIf="!hayError">
+  <div class="col">
+    <app-paises-tabla [paises]='capitales'></app-paises-tabla>
+  </div>
+</div>
