--- a/src/app/paises/components/paises-tabla/paises-tabla.component.html
+++ b/src/app/paises/components/paises-tabla/paises-tabla.component.html
@@ -1,4 +1,7 @@
-<table class="table table-hover" *ngIf="paises[0]">
+<table
+  class="table table-hover animate__animated animate__slideInRight"
+  *ngIf="paises[0]"
+>
   <thead>
     <tr>
       <th>Código País</th>
@@ -9,7 +12,10 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let pais of paises; let i = index">
+    <tr
+      *ngFor="let pais of paises; let i = index"
+      class="animate__animated animate__slideInRight"
+    >
       <td>{{ i + 1 }}</td>
       <td><img class="small-flag" [src]="pais.flag" /></td>
       <td>{{ pais.capital }}, {{ pais.name }}</td>
