--- a/src/app/paises/pages/ver-pais/ver-pais.component.html
+++ b/src/app/paises/pages/ver-pais/ver-pais.component.html
@@ -1,1 +1,52 @@
-<p>ver-pais works!</p>
+<div *ngIf="!pais; else divPais" class="alert alert-info">
+  Espere por favor...
+</div>
+
+<ng-template #divPais>
+  <div class="row animate__animated animate__bounceInDown">
+    <div class="col-12 ">
+      <h1>
+        Pais: <small>{{ pais.name }}</small>
+      </h1>
+    </div>
+  </div>
+
+  <div class="row animate__animated animate__bounceInDown">
+    <div class="col-4">
+      <h3>Bandera</h3>
+      <img [src]="pais.flag" class="img-thumbnail" />
+    </div>
+    <div class="col">
+      <h3>Información</h3>
+      <ul class="list-group">
+        <li class="list-group-item">
+          <strong>Población</strong> {{ pais.population | number }}
+        </li>
+        <li class="list-group-item">
+          <strong>Código Numérico</strong> {{ pais.numericCode }}
+        </li>
+        <li class="list-group-item">
+          <strong>Código Alpha3</strong> {{ pais.alpha3Code }}
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <h3 class="animate__animated animate__bounceInDown">Traducciones</h3>
+  <div class="row animate__animated animate__bounceInDown">
+    <div class="col">
+      <span class="badge bg-primary mr-3">{{ pais.translations.de }}</span>
+      <span class="badge bg-primary mr-3">{{ pais.translations.es }}</span>
+      <span class="badge bg-primary mr-3">{{ pais.translations.br }}</span>
+      <span class="badge bg-primary mr-3">{{ pais.translations.pt }}</span>
+      <span class="badge bg-primary mr-3">{{ pais.translations.nl }}</span>
+      <span class="badge bg-primary mr-3">{{ pais.translations.ja }}</span>
+      <span class="badge bg-primary mr-3">{{ pais.translations.it }}</span>
+      <span class="badge bg-primary mr-3">{{ pais.translations.fa }}</span>
+    </div>
+  </div>
+
+  <!-- <pre class="mt-5">
+    {{pais | json}}
+  </pre> -->
+</ng-template>
