--- a/src/app/paises/pages/por-region/por-region.component.html
+++ b/src/app/paises/pages/por-region/por-region.component.html
@@ -1,1 +1,9 @@
-<p>por-region works!</p>
+<h3>Buscar por Región <small>region activa</small></h3>
+<hr />
+<h5>Seleccione la región</h5>
+
+<div class="row">
+  <div class="col">
+    <button *ngFor="let region of regiones" class="btn btn-outline-primary">{{ region }}</button>
+  </div>
+</div>
