--- a/src/app/paises/pages/por-region/por-region.component.html
+++ b/src/app/paises/pages/por-region/por-region.component.html
@@ -1,9 +1,31 @@
-<h3>Buscar por Región <small>region activa</small></h3>
+<h3>
+  Buscar por Región <small> {{ regionActiva | titlecase }} </small>
+</h3>
 <hr />
 <h5>Seleccione la región</h5>
 
 <div class="row">
   <div class="col">
-    <button *ngFor="let region of regiones" class="btn btn-outline-primary">{{ region }}</button>
+    <button
+      *ngFor="let region of regiones"
+      [class]="asignarClaseCss(region)"
+      (click)="activarRegion(region)"
+      (click)='buscar(region)'
+    >
+    <!--El contenido entre corchetes significa que puedo agregar cierta clase al boton
+    si cumple determinada condición
+    [class.activo]= 'region === regionActiva'-->
+
+    <!-- Otra forma de hacer lo mismo pero más eficiente
+        [ngClass]="{
+        'btn-primary': regionActiva === region,
+        'btn-outline-primary': regionActiva !== region
+      }"-->
+      {{ region | titlecase }}
+    </button>
+
+    <div class="col">
+      <app-paises-tabla [paises]='tablaRegiones'></app-paises-tabla>
+    </div>
   </div>
 </div>
