--- a/src/app/paises/pages/por-pais/por-pais.component.html
+++ b/src/app/paises/pages/por-pais/por-pais.component.html
@@ -1,19 +1,35 @@
 <h2>Por pais</h2>
-<hr>
+<hr />
 
 <div class="row">
   <div class="col">
-    <app-paises-input (onEnter)='buscar( $event )' (onDebounce)= 'sugerencias($event)' placeholder='Buscar pais...'></app-paises-input>
+    <app-paises-input
+      (onEnter)="buscar($event)"
+      (onDebounce)="sugerencias($event)"
+      placeholder="Buscar pais..."
+    ></app-paises-input>
   </div>
 </div>
 
-<hr>
+<ul class="list-group" *ngIf="mostrarSugerencias">
+  <li
+    class="list-group-item list-group-item-action"
+    *ngFor="let pais of paisesSugeridos"
+  >
+    <a [routerLink]="['/pais', pais.alpha2Code]">{{ pais.name }}</a>
+  </li>
+  <li class="list-group-item list-group-item-action" (click)="buscarSugerido(termino)">
+    <a> Buscar "{{termino}}"</a>
+  </li>
+</ul>
+
+<hr />
 <div class="alert alert-danger" *ngIf="hayError">
-  No se encontró nada con el término: {{termino}}
+  No se encontró nada con el término: {{ termino }}
 </div>
 
 <div class="row" *ngIf="!hayError">
   <div class="col">
-    <app-paises-tabla [paises]='paises'></app-paises-tabla>
+    <app-paises-tabla [paises]="paises"></app-paises-tabla>
   </div>
 </div>
